{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 563,
  "lineage": "1c2e7785-fd5d-aa09-2988-e36341b5dc10",
  "resources": [
    {
      "module": "module.linux_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01672273-c-vm-nic-1",
            "internal_domain_name_suffix": "qbqv1xshlt5edd1qfj0eqktzxc.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01672273-c-vm-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-c-vm-pip-1",
                "subnet_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "n01672273-c-vm-nic-1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "linux-rg"
          },
          "dependencies": [
            "module.linux_vms.azurerm_public_ip.linux_public_ip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.linux_rg",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01672273-c-vm-nic-2",
            "internal_domain_name_suffix": "qbqv1xshlt5edd1qfj0eqktzxc.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01672273-c-vm-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-c-vm-pip-2",
                "subnet_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "n01672273-c-vm-nic-2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "linux-rg"
          },
          "dependencies": [
            "module.linux_vms.azurerm_public_ip.linux_public_ip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.linux_rg",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01672273-c-vm-1",
            "fqdn": "n01672273-c-vm-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-c-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01672273-c-vm-pip-1",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.linux_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01672273-c-vm-2",
            "fqdn": "n01672273-c-vm-2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-c-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01672273-c-vm-pip-2",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.linux_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg1",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "de5d6180-5c47-41fe-8f70-2a74482a79ba",
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/n01672273-w-vm-nic-1",
            "internal_domain_name_suffix": "qbqv1xshlt5edd1qfj0eqktzxc.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01672273-w-vm-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-w-vm-pip-1",
                "subnet_id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "n01672273-w-vm-nic-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "windows-rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_groups.azurerm_resource_group.network_rg",
            "module.resource_groups.azurerm_resource_group.windows_rg",
            "module.windows_vms.azurerm_public_ip.windows_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.windows_vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01672273-w-vm-1",
            "fqdn": "n01672273-w-vm-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3d97f65a-afbb-4425-a348-09a93517d949/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01672273-w-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01672273-w-vm-pip-1",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.windows_rg"
          ]
        }
      ]
    }
  ]
}